[gd_scene load_steps=14 format=3 uid="uid://ctyixwmxls1xf"]

[ext_resource type="Script" uid="uid://74ugebrbbmct" path="res://Visuals/debugging_node.gd" id="2_bjt74"]
[ext_resource type="PackedScene" uid="uid://dvnli7euh2sh5" path="res://Movement styles/movement_style_1.tscn" id="5_m64x7"]
[ext_resource type="PackedScene" uid="uid://bom5cdjsr3oj8" path="res://Torso styles/torso_style_1.tscn" id="6_t0gij"]
[ext_resource type="Script" uid="uid://bfrfmnvcxdukh" path="res://Camera styles/camera_2d_new.gd" id="7_y7bk3"]
[ext_resource type="Script" uid="uid://g7fnkyhbdemq" path="res://UI/hp_left.gd" id="8_e3tf4"]
[ext_resource type="PackedScene" uid="uid://b6o1fo0ewnjln" path="res://Weapons/gun_new.tscn" id="8_m64x7"]
[ext_resource type="PackedScene" uid="uid://dx06ua82xghkg" path="res://Aiming styles/aiming_style_1.tscn" id="8_t0gij"]
[ext_resource type="Script" uid="uid://clxhegpqyijug" path="res://UI/xp_to_level.gd" id="9_m64x7"]
[ext_resource type="PackedScene" uid="uid://c5nunyagwdk5f" path="res://UI/pause_menu.tscn" id="10_t0gij"]
[ext_resource type="PackedScene" uid="uid://ct4uhithfj3kk" path="res://UI/level_up_screen.tscn" id="11_qhx67"]
[ext_resource type="Script" uid="uid://cyitxyi8t2nf" path="res://Character/head_new.gd" id="14_qhx67"]
[ext_resource type="Texture2D" uid="uid://bbqhe4bkrpp8a" path="res://Assets/HatCompressed.png" id="15_eklly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_txm64"]
radius = 300.0

[node name="RogueB" type="CharacterBody2D" groups=["Player"]]
visibility_layer = 2
metadata/Player = true

[node name="DebuggingNode" type="Node2D" parent="."]
z_index = 999
script = ExtResource("2_bjt74")

[node name="GunRight" parent="." instance=ExtResource("8_m64x7")]
unique_name_in_owner = true

[node name="GunLeft" parent="." instance=ExtResource("8_m64x7")]
unique_name_in_owner = true

[node name="AimingStyle1" parent="." instance=ExtResource("8_t0gij")]
unique_name_in_owner = true

[node name="MovementStyle1" parent="." instance=ExtResource("5_m64x7")]
unique_name_in_owner = true

[node name="TorsoStyle1" parent="." instance=ExtResource("6_t0gij")]
unique_name_in_owner = true

[node name="Camera2DNew" type="Camera2D" parent="."]
position = Vector2(24, 0)
ignore_rotation = false
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0
script = ExtResource("7_y7bk3")

[node name="LabelHealthLeft" type="Label" parent="Camera2DNew"]
visible = false
offset_left = -286.0
offset_top = -160.0
offset_right = -234.0
offset_bottom = -137.0
text = "Health left:"
metadata/_edit_use_anchors_ = true

[node name="HPLeft" type="Label" parent="Camera2DNew"]
visible = false
offset_left = -190.0
offset_top = -160.0
offset_right = -150.0
offset_bottom = -137.0
text = "10"
script = ExtResource("8_e3tf4")
metadata/_edit_use_anchors_ = true

[node name="LabelXPLeft" type="Label" parent="Camera2DNew"]
visible = false
offset_left = -286.0
offset_top = -136.0
offset_right = -162.0
offset_bottom = -113.0
text = "XP until NL:"

[node name="XPToLevel" type="Label" parent="Camera2DNew"]
visible = false
offset_left = -190.0
offset_top = -137.0
offset_right = -150.0
offset_bottom = -114.0
text = "10"
script = ExtResource("9_m64x7")
metadata/_edit_use_anchors_ = true

[node name="Pause menu" parent="Camera2DNew" instance=ExtResource("10_t0gij")]
visible = false
z_index = 1

[node name="LevelUpScreen" parent="Camera2DNew" instance=ExtResource("11_qhx67")]
process_mode = 2
visible = false
z_index = 1
offset_left = -288.0
offset_top = -161.0
offset_right = -288.0
offset_bottom = -161.0

[node name="HeadNew" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("14_qhx67")

[node name="HatCompressed" type="Sprite2D" parent="HeadNew"]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("15_eklly")
flip_v = true

[node name="HeadPerspective" type="CollisionShape2D" parent="HeadNew"]
visible = false
shape = SubResource("CircleShape2D_txm64")

[connection signal="cameraRotated" from="Camera2DNew" to="MovementStyle1" method="_on_camera_2d_new_camera_rotated"]
[connection signal="cameraRotated" from="Camera2DNew" to="HeadNew" method="_on_camera_2d_new_camera_rotated"]
